--- a/css/gps2-1.css
+++ b/css/gps2-1.css
@@ -1,1 +1,30 @@
-h1 {color: pink;}
+header {
+  border: 1px solid black;
+  margin: 20px;
+  padding: 20px;
+  background-color: blue;
+  font-family: Georgia;
+}
+
+img {
+  width: 30%;
+  height: 30%;
+  border-radius: 50%;
+}
+
+section {
+  display: inline-block; 
+  vertical-align: top;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  width: 40%;
+  font-family: Helvetica;
+}
+
+footer {
+  border: 1px dotted black; 
+  margin: 20px;
+  padding: 20px; 
+  background-color: red;
+}
